@@ -1,3 +1,9 @@
+2001-03-08  Tor Lillqvist  <tml@iki.fi>
+
+	* glib.def
+	* gobject/gobject.def
+	* gobject/makefile.mingw.in: Update.
+
 2001-03-08  Sven Neumann  <sven@gimp.org>
 
 	* gtree.[ch]: 
